# Model-Operating-Kernel

./: .gitignore  AGENTS.md  Architecture-report.md  CLAUDE.md  Decision-Making and Failure-Mode Design for a Local Model-Orchestration Kernel (MoK).md  LICENSE  README.md  deep-research-report.md  pyproject.toml  run_mok.py
configs/: example_experts.json  experts_v04.example.json
docs/: 01-project-overview.md  02-kernel-architecture.md  03-training-environment.md  04-training-plan.md  05-roadmap-24-weeks.md  06-relevant-snippets.md  07-kickoff-14-days.md  08-open-questions.md  architecture.md  research_plan.md  runtime_mvp.md  telemetry_schema.md  v0_5_mok_spec.md
sources/: OCR Extract.txt
src/atlas_load_cartographer/: __init__.py
src/atlas_load_cartographer/gateway/: __init__.py  app.py  config.py  embedding_router.py  preload_manager.py  telemetry.py
src/mok/: __init__.py  __main__.py
src/mok/evaluation/: __init__.py  oracle.py
src/mok/memory/: __init__.py  budget.py
src/mok/models/: __init__.py  backends.py  gguf.py  registry.py
src/mok/orchestration/: __init__.py  runtime.py
src/mok/routing/: router.py
src/mok/telemetry/: __init__.py  events.py
templates/: .env.example  README.repo-template.md  configs.example_experts.json  pyproject.toml.template  requirements-router.txt  requirements-runtime.txt  requirements-training.txt
tests/: test_budget.py  test_gguf.py  test_memory_budget.py  test_model_registry.py  test_oracle.py  test_preload_manager.py  test_registry.py  test_router.py  test_runtime.py
