[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-operating-kernel"
version = "0.4.0a0"
description = "A lightweight Model Operating Kernel for local multi-expert LLM routing and resource protection."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Shawn O'Hagan" }
]
keywords = [
  "llm",
  "lora",
  "routing",
  "kernel",
  "sglang",
  "vram",
  "local-first",
  "multi-expert"
]
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
